Completed the Update User Profile API
